Fix some more inline checkbox/radio/label alignment issue

--- a/css/app.css
+++ b/css/app.css
@@ -17,10 +17,19 @@ body {
 .form-group .radio-inline.radio-inline-no-indent+.radio-inline.radio-inline-no-indent {
     margin-left: 0;
     margin-right: 10px;
+    padding-left: 0;
 }
 .form-group .checkbox-inline.checkbox-inline-no-indent:last-child,
 .form-group .radio-inline.radio-inline-no-indent:last-child {
     margin-left: 0;
+}
+
+/* Fix inline labels alignment issue */
+.form-group .checkbox label:nth-child(n+2),
+.form-group .radio label:nth-child(n+2),
+.form-group .checkbox-inline.checkbox-inline-no-indent label:nth-child(n+2),
+.form-group .radio-inline.radio-inline-no-indent label:nth-child(n+2) {
+    padding-left: 0;
 }
 
 /* Allow extra checkboxes/radios to placed with checkbox/radio containers */
